# umc

./: .gitignore  CLAUDE.md  CMakeLists.txt  build_script.sh
include/: adjacent_prediction.hpp  barycentric_hierarchy.hpp  cluster_hierarchy.hpp  compress.hpp  edge_collapse_hierarchy.hpp  parameterization.hpp  reorder.hpp  tet_collapse_hierarchy.hpp
python_hierarchy/: anchor_viz_common.py  generate_centroid_triangulation.py  generate_ocean_triangulation.py  generate_tsunami_triangulation.py  mesh_decimation.py  tsunami_aggressive_hierarchy.py  tsunami_hierarchy_prototype.py  visualize_barycentric_anchors.py  visualize_barycentric_anchors_edge_collapse.py  visualize_ocean_levels.py  visualize_ocean_levels_edge_collapse.py
test/: CMakeLists.txt  test_compress_barycentric.cpp  test_compress_tet.cpp  test_decompress_barycentric.cpp  test_decompress_tet.cpp  test_parameterization_tsunami.cpp  test_parameterization_tsunami_multilevel.cpp
